<resources>
    <string name="app_name">VISIDA</string>
    <string name="title_activity_record_audio">Record Audio</string>
    <string name="title_activity_select_eating_occasion">Select Eating Occasion</string>
    <string name="title_add_recipe">Add Recipe</string>
    <string name="title_breastfeed">Breastfeed</string>
    <string name="title_create_householdmember">Create Household Member</string>
    <string name="title_create_recipe">Create Recipe</string>
...
    <string name="participantid">Participant ID</string>
    <string name="finalize_eo_notification_channel_name">Finalise Eating Occasion</string>
    <string name="finalize_eo_notification_channel_description">Notification to remind user to finalise eating occasions.</string>
    <string name="whattime"><u>Time you would like to finalise your day:\u0020</u> </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tick">\u2714</string>
    <string name="cross">\u2716</string>
    <string name="addIngredients">Add Ingredients</string>
    <string name="finalize">Finalise</string>
    <string name="recipes">Recipes</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="addIngredient">Add Ingredient</string>
    <string name="recipe_saved">Recipe Saved</string>
    <string name="ingredient_added">Ingredient Added</string>
...
    <string name="eatanymore">The images above show what you ate throughout today. Did you eat anything else today?</string>
    <string name="review_your_day">Review your day:</string>
    <string name="dishes">Shared Dishes</string>
    <string name="addDish">Add Dish</string>
    <string name="mealrecorded">Meal Recorded</string>
    <string name="ate">Ate</string>
    <string name="leftover_prompt">Are there any leftovers for this dish?</string>
    <string name="NO_PHOTO" translatable="false">NO_IMAGE</string>
    <string name="NO_AUDIO" translatable="false">NO_AUDIO</string>
    <string name="invalid_pin">Invalid PIN</string>
    <string name="guests">Guests</string>
    <string name="adultmale">Adult Male Guest(s)</string>
    <string name="adultfemale">Adult Female Guest(s)</string>
    <string name="child">Child Guest(s)</string>
    <string name="no_leftovers">No Leftovers</string>
    <string name="error_participant_household_id">Please enter a Household ID</string>
    <string name="error_participant_id">Please enter a participant ID</string>
    <string name="recipe_deleted">Recipe Deleted</string>
    <string name="shared_plates">Shared Plates</string>
    <string name="how_many_in_household">Not including yourself, how many people usually live in your household?</string>
    <string name="how_many_adult_male">Number adult (≥18 years) males:</string>
...
