...
        app:layout_constraintBottom_toBottomOf="@+id/dialog_text"
        app:layout_constraintEnd_toStartOf="@+id/dialog_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dialog_text" />

    <ImageView
        android:id="@+id/dialog_imageview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
...
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@color/colorSeconday"
            android:textColor="@color/white"
            android:drawableTop="@drawable/ic_btn_tick"
            android:drawableTint="@color/white"
            android:paddingTop="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="CONFIRM"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnCancel"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="150dp"
            android:layout_height="50dp"
...
